bootstrap classes added + new comments added for content

--- a/src/blog/templates/base_template.html
+++ b/src/blog/templates/base_template.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Accueil du blog!</title>
+    <title>Le blog!</title>
   </head>
   <body>
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="http://localhost:8000">Blog</a>
+        <a class="ms-3 navbar-brand" href="http://localhost:8000">Blog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,17 +24,20 @@
               <a class="nav-link" href="http://localhost:8000/list">Tous les articles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost:8000/admin/blog/post/add/">Ajouter un article</a>
+              <a class="nav-link" target="_blank" href="http://localhost:8000/admin/blog/post/add/">Ajouter un article</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
 
-    {% block content %}
+    <div class="container">
+      <div class="row g-0 justify-content-md-center">
+        {% block content %}
 
-    {% endblock %}
-
+        {% endblock %}
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
   </body>
