--- a/src/blog/templates/list_page.html
+++ b/src/blog/templates/list_page.html
@@ -2,33 +2,38 @@
 
 {% block content %}
 
-<h1>Tous les articles</h1>
+<div class="col-md-12 my-5 text-center">
+  <h1>Tous les articles</h1>
+</div>
 
 <div class="row g-0">
   <div class="col-md-12">
-    <ul class="list-unstyled">
       {%for post in posts%}
-      <li>
-        <a href="http://localhost:8000/{{post.slug}}">
+      <a class="text-decoration-none " href="http://localhost:8000/{{post.slug}}">
+        <div class="card mb-3">
+          <img style="width: 100%; height: 20vh; object-fit: cover; object-position: 50% 20%;" src="{{post.image}}" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-dark fw-bolder">{{post.title}}</h5>
+            <p class="card-text text-dark">{{post.short_description}}</p>
+            <p class="card-text"><small class="text-muted fst-italic">Publié le {{post.ctime | date:'d/m/Y'}}</small></p>
+          </div>
+        </div>
+        <!-- <div class="card mb-3" style="max-width: 50vw;">
           <div class="row g-0">
-            <div class="col-md-1 border p-0">
-              <img style="width: 150px; height: 20vh; object-fit: cover; object-position: 50% 50%;" src="{{post.image}}"
-                alt="">
+            <div class="col-md-4">
+              <img style="width: 150px; height: 20vh; object-fit: cover; object-position: 50% 50%;" src="{{post.image}}" alt="...">
             </div>
-            <div class="col-md-1 border d-flex align-items-center">
-              {{post.title}}
-            </div>
-            <div class="col-md-2 border d-flex align-items-center">
-              {{post.ctime | date:'d/m/Y'}}
-            </div>
-            <div class="col-md-5 border d-flex align-items-center">
-              {{post.short_description}}
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">{{post.title}}</h5>
+                <p class="card-text">{{post.short_description}}</p>
+                <p class="card-text"><small class="text-muted">Publié le {{post.ctime | date:'d/m/Y'}}</small></p>
+              </div>
             </div>
           </div>
-        </a>
-      </li>
-      {%endfor%}
-    </ul>
+        </div> -->
+      </a>
+    {%endfor%}
   </div>
 </div>
 
