--- a/src/blog/templates/single_post.html
+++ b/src/blog/templates/single_post.html
@@ -6,39 +6,38 @@
   <div class="col-md-12">
 
     <div class="row mx-5">
-      <div class="col-md-12">
+      <div class="col-md-12 my-5 text-center">
         <h1>{{post.title}}</h1>
-        {% with comments.count as comments_counter %}
-        <p class="font-italic">
-          {{post.ctime | date:'d/m/Y à H:m'}} - {{comments_counter}} commentaires
-        </p>
-        {% endwith %}
       </div>
     </div>
 
-    <div class="row g-0">
+    <div class="row g-0 mb-5">
       <div class="col-md-12 border">
         <img style="width: 100%; height: 20vh; object-fit: cover; object-position: 0 50%;" src="{{post.image}}" alt="">
       </div>
     </div>
 
-    <div class="row mx-5 g-0">
+    <div class="row mx-5 my-5 g-0">
       <div class="col-md-12">
-        <em>
-          {{post.short_description}}
-        </em>
-        <p>
-          {{post.content}}
-        </p>
+        <p class="fst-italic">{{post.short_description}}</p>
+        <p>{{post.content}}</p>
       </div>
     </div>
+    {% with comments.count as comments_counter %}
+        <p class="fst-italic">
+          publié le {{post.ctime | date:'d/m/Y à H:m'}} - {{comments_counter}} commentaires
+        </p>
+        {% endwith %}
     <hr>
 
     <div class="row g-0">
       <div class="col-md-12">
         {%for comment in comments%}
-        <p>{{comment.content}}</p>
-        <p>Commentaire posté le {{comment.ctime | date:'d/m/Y à H:m'}}</p>
+        <div class="col-md-8 my-3 p-2 border border-success rounded">
+          <p>{{comment.content}}</p>
+          <p class="m-0 fst-italic"><small>Commentaire posté le {{comment.ctime | date:'d/m/Y à H:m'}}</small></p>
+        </div>
+        
         {% empty %}
         <p>Pas de commentaire sur cet article.</p>
         <p>Soyez-le premier a écrire un commentaire.</p>
@@ -47,7 +46,7 @@
     </div>
 
     <div class="row g-0">
-      <div class="col-md-12">
+      <div class="col-md-12 m-3">
         <form class="form-group" method="POST">
           {{comment_form.as_p}}
           {% csrf_token %}
