templates: minors changes in HTML templates

--- a/src/blog/templates/index.html
+++ b/src/blog/templates/index.html
@@ -18,7 +18,7 @@
     <p class="card-text ">{{post.short_description}}</p>
   </div>
   <div class=" m-2 d-flex align-items-bottom">
-    <a href="http://localhost:8000/{{post.slug}}" class="btn btn-primary">Lire plus...</a>
+    <a href="http://localhost:8000/post/{{post.slug}}" class="btn btn-primary">Lire plus...</a>
   </div>
 </div>
 
