--- a/src/blog/templates/base_template.html
+++ b/src/blog/templates/base_template.html
@@ -10,7 +10,7 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="ms-3 navbar-brand" href="http://localhost:8000">Blog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
     </header>
 
     <div class="container">
-      <div class="row g-0 justify-content-md-center">
+      <div class="mt-5 row g-0 justify-content-md-center">
         {% block content %}
 
         {% endblock %}
