added links for JSON views

--- a/src/blog/templates/list_page.html
+++ b/src/blog/templates/list_page.html
@@ -4,6 +4,9 @@
 
 <div class="col-md-12 my-5 text-center">
   <h1>Tous les articles</h1>
+  <p class="fst-italic">
+    <small><a href="http://localhost:8000/json_posts/">Voir les articles en JSON</a></small>
+  </p>
 </div>
 
 <div class="row g-0">
