--- a/src/blog/templates/single_post.html
+++ b/src/blog/templates/single_post.html
@@ -8,6 +8,9 @@
     <div class="row mx-5">
       <div class="col-md-12 my-5 text-center">
         <h1>{{post.title}}</h1>
+        <p class="fst-italic">
+          <small><a href="http://localhost:8000/json_post/{{post.slug}}">Voir l'article en JSON</a></small>
+        </p>
       </div>
     </div>
 
